# akaza

./: .gitignore  .gitmodules  .tagpr  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.test.yml  lefthook.yml  renovate.json
.github/workflows/: ci-simple.yml  deploy-docs.yml  model.yml  validate-model.yml
akaza-conf/: Cargo.toml
akaza-conf/src/: conf.rs
akaza-conf/src/pane/: core_pane.rs  dict_pane.rs
akaza-data/: Cargo.toml  Makefile  README.md
akaza-data/src/: main.rs  utils.rs
akaza-data/src/corpus_reader/: aozora_bunko.rs  wikipedia_extracted.rs
akaza-data/src/subcmd/: bench.rs  check.rs  convert_skip_bigram_model.rs  evaluate.rs  learn_corpus.rs  make_dict.rs  make_stats_system_bigram_lm.rs  make_stats_system_skip_bigram_lm.rs  make_stats_system_unigram_lm.rs  mod.rs  tokenize_line.rs  vocab.rs  wfreq.rs
akaza-data/src/tokenizer/: base.rs  vibrato.rs
akaza-data/src/wordcnt/: mod.rs  wordcnt_bigram.rs  wordcnt_skip_bigram.rs  wordcnt_unigram.rs
akaza-dict/: Cargo.toml
akaza-dict/src/: conf.rs
corpus-stats/: Makefile  NOTICE  README.md
corpus-stats/docs/: available-japanese-corpora.md  jawiktionary-evaluation.md
corpus-stats/scripts/: extract-cc100.py
default-model/: Makefile  README.md
default-model/dict/: SKK-JISYO.akaza
docs/: book.toml  clause-extension-behavior.md  k-best-segmentation.md  reranking-evaluation-report.md  reranking.md
docs/src/: SUMMARY.md  introduction.md
docs/src/internals/: README.md  clause-extension-behavior.md  conversion-engine.md  data-flow.md  evaluation.md  learn-corpus.md  reranking-evaluation-report.md  reranking.md
docs/src/internals/notes/: README.md  learn-corpus-improvement.md  numeric-counter-redesign.md  structured-perceptron-evaluation.md
docs/src/internals/notes/corpus-stats/: cc100-cleaning-strategy.md  cirrus-japanese-corpora.md
docs/src/user-manual/: README.md
ibus-akaza/: Cargo.toml  DOCKER_TESTING.md  Dockerfile.test  Makefile  README.md  build.rs  docker-test-entrypoint.sh  ibus-akaza-debug-engine.sh  ibus-akaza-debug-session.sh
ibus-akaza/src/: commands.rs  context.rs  current_state.rs  input_mode.rs  keymap.rs  lib.rs  main.rs  wrapper_bindings.rs
ibus-akaza/src/ui/: prop_controller.rs
ibus-akaza/tests/: e2e.rs  integration.rs
ibus-akaza/tests/e2e/: basic_input_test.rs  main.rs  mod.rs  test_harness.rs
ibus-akaza/tests/integration/: key_processing_test.rs  mod.rs
ibus-sys/: Cargo.toml
keymap/: default.yml
libakaza/: Cargo.toml
libakaza/src/: config.rs  extend_clause.rs  keymap.rs  lib.rs  numeric_counter.rs
libakaza/src/dict/: loader.rs
libakaza/src/dict/skk/: ari2nasi.rs
libakaza/src/engine/: base.rs  bigram_word_viterbi_engine.rs
libakaza/src/graph/: candidate.rs  graph_builder.rs  graph_resolver.rs  lattice_graph.rs  mod.rs  reranking.rs  segmenter.rs  word_node.rs
libakaza/src/kana_kanji/: marisa_kana_kanji_dict.rs
libakaza/src/lm/: base.rs  mod.rs  system_bigram.rs  system_skip_bigram.rs  system_unigram_lm.rs
libakaza/src/lm/on_memory/: mod.rs  on_memory_system_skip_bigram_lm.rs
libakaza/src/user_side_data/: bigram_user_stats.rs  mod.rs  skip_bigram_user_stats.rs  unigram_user_stats.rs  user_data.rs  user_stats_utils.rs
libakaza/tests/: integration_test.rs
marisa-sys/: Cargo.toml  build.rs
