[package]
name = "akaza-data"
version = "0.1.7"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
time = "0.3"
anyhow = "1.0"
log = "0.4"
libakaza = { path = "../libakaza" }
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.2"
encoding_rs = "0.8"
regex = "1"
lcs = "0.2"
chrono = "0.4"
vibrato = "0.5.2"
walkdir = "2"
rayon = "1.10"
rsmarisa = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]

[[bin]]
name = "akaza-data"
path = "src/main.rs"

