[package]
name = "ibus-akaza"
version = "0.1.7"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
anyhow = "1.0"
log = "0.4"
libakaza = { path = "../libakaza" }
ibus-sys = { path = "../ibus-sys" }
akaza-conf = { path = "../akaza-conf" }
akaza-dict = { path = "../akaza-dict" }
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.2"
kelp = "0.6"
regex = "1"
fern = "0.6"
chrono = "0.4"
xdg = "2.5"

[build-dependencies]
cc = "1.0"
