[package]
name = "libakaza"
version = "0.1.7"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marisa-sys = { path = "../marisa-sys" }
chrono = "0.4"
regex = "1"
log = "0.4"
env_logger = "0.11"
tempfile = "3"
anyhow = "1.0"
half = "2.4"
kelp = "0.6"
xdg = "2.5"
encoding_rs = "0.8"
cedarwood = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]

